--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 theme: jekyll-theme-minimal
 title: Tristan Engst
 logo: images/tristan-engst-formal-1-square.jpeg
-
+position: PhD Student
+affiliation: Simon Fraser University
+email: tme3-AT-sfu-DOT-ca
