correct profile pic extension

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 title: Tristan Engst
-logo: images/tristan-engst-formal-1-circle.jpeg
+logo: images/tristan-engst-formal-1-circle.png
 position: PhD Student
 affiliation: Simon Fraser University
 email: tme3-AT-sfu-DOT-ca
